# ellipsis

./: .mergify.yml  .rustfmt.toml  .versio.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: build-releases.yml  test-and-tag.yml
docs/: copy.md  dry-run.md  exec.md  link.md  operations.md
homebrew/: formula.rb.j2
runners/: specdown-runner
src/: cli.rs  config.rs  domain.rs  main.rs
src/operations/: actual.rs  blackhole.rs  driver.rs  io.rs  mod.rs  runner.rs
