[package]
name = "ellipsis"
version = "0.6.56"
authors = ["Billie Thompson <billie@billiecodes.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/PurpleBooth/ellipsis"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "dotfiles" ]
description = "Manage dotfiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"
clap = { version = "3.2.16", features = ["derive", "cargo", "wrap_help", "yaml", "env", "unicode" ] }
serde = { version = "1.0.142", features = ["derive"] }
serde_yaml = "0.8.26"
indoc = "1.0.7"
tempfile = "3.3.0"
regex = "1.6.0"
anyhow = "1.0.59"
